src/surface/card/compiler/neighborhood/snapshots/synrepo__surface__card__compiler__neighborhood__tests__neighborhood_response_tiny.snap
---
source: src/surface/card/compiler/neighborhood/tests.rs
expression: tiny
---
{
  "focal_card": {
    "file": "file_b789da0c4a5df1c4dd2d83a633e97cc4",
    "path": "src/lib.rs",
    "root_id": "primary",
    "is_primary_root": true,
    "root_kind": "primary",
    "root_label": "primary",
    "editable": true,
    "symbols": [
      {
        "id": "sym_c42168e18795bc7be6c62c10dcd1df41",
        "qualified_name": "add",
        "location": "src/lib.rs:22"
      }
    ],
    "approx_tokens": 10,
    "context_accounting": {
      "budget_tier": "tiny",
      "token_estimate": 10,
      "raw_file_token_estimate": 22,
      "estimated_savings_ratio": 0.5454545454545454,
      "source_hashes": [
        "26535f89bfda506331673d0cd2c73c4311fc9f61f361b7188e84cb858e8f8986"
      ],
      "stale": false,
      "truncation_applied": false
    },
    "source_store": "graph"
  },
  "co_change_state": "missing",
  "edge_counts": {
    "outbound_calls_count": 0,
    "outbound_imports_count": 0,
    "governs_count": 0,
    "co_change_count": 0
  },
  "budget": "tiny"
}
